seccion-21/174-ingress-rules-modified/k8s/app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2-deploy
  labels:
    app: app-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command: ['sh', '-c', 'echo "<h1>APP V2</h1><p>VERSION 1.0 desde $HOSTNAME</p>" > /usr/share/nginx/html/index.html && nginx -g "daemon off;"']
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-svc
  labels:
    app: app-v2
spec:
  type: NodePort
  selector:
    app: app-v2
  ports:
    - name: http
      port: 9090
      targetPort: 80
      protocol: TCP
